--- a/service-mocking/package.json
+++ b/service-mocking/package.json
@@ -4,6 +4,7 @@
   "description": "A sample Node.js project",
   "main": "index.js",
   "scripts": {
+    "static": "serve -p 5050 static",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Reis Caffrey",
